--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,4 @@
 sources:
   cosmic-randr-epoch-1.0.0-alpha.5.1.tar.gz: a6eefcb0d1b71c3c571b69b87b3e8bdfb85f38d8
-  vendor.tar.xz: d5a9bcb33dccb6daee6ab342a76ff857bb22f5be
+  vendor.tar.xz: aae36084951d32b7ee10fb7547707ab14dc3e557
+  cosmic-randr-epoch-1.0.0-alpha.6.tar.gz: dbda09cbb1a65489a17095127202e1289f128072
