--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  cosmic-randr-epoch-1.0.0-alpha.7.tar.gz: e5b20288dd2cdd7e30a371a92e13245fee60a588
-  vendor.tar.xz: 537f00c64e0d37ff52650a94d97e8bf52b324f25
+  cosmic-randr-epoch-1.0.0-beta.1.tar.gz: 0395c419ccf96cf26ed1bbd21daf57afc29d87ad
+  vendor.tar.xz: 5d3adfc66cf357b2b52271e3225b18b95b9614e4
