--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  cosmic-randr-epoch-1.0.0-beta.7.tar.gz: e0c201aaf76c8f1db401f0bb43a94273ef7a0a4b
-  vendor.tar.xz: c1598d865cb60dd95fd8a9d1c394aa1d5fc22213
+  cosmic-randr-epoch-1.0.2.tar.gz: 2bd5e1ab990072591e18222c6e9032df0bab5c11
+  vendor.tar.xz: 4c0df3e2fa824b2eff79de550945809bb173c863
